Software:avoid clipping

--- a/css/Adwaita/apps/software.scss
+++ b/css/Adwaita/apps/software.scss
@@ -158,7 +158,7 @@ $variant: 'light';
 
 %tile {
     background-color: $base_color;
-    margin: 2px;
+    margin: 3px;
     /* border: 2px solid $base_color; */
     box-shadow: 0 1px 2px rgba(0,0,0,0.2);
     border-radius: 10px;
@@ -174,7 +174,7 @@ $variant: 'light';
     }
     &:active {
       box-shadow: none;
-      background-color: darken($bg-color, 20%);
+      background-color: darken($bg-color, 10%);
     }
 }
 
